@@ -1,3 +1,7 @@
+2011-12-12  Karl Berry  <karl@tug.org>
+
+	* updmap.pl: untabify, formatting.
+
 2011-12-06  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* Makefile.am: Replace ${prefix}/texmf => $(datarootdir)/texmf.
